--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -3,8 +3,9 @@
     <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="18"/>
 
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>    
-    
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+            <uses-permission android:name="android.permission.INTERNET"/>
    <permission android:name="com.example.giveaway.permission.C2D_MESSAGE" android:protectionLevel="signature"/>
 
    <uses-permission android:name="com.example.giveaway.permission.C2D_MESSAGE"/>
